Add some mobile style of news single page

--- a/_posts/2016-06-03-test.md
+++ b/_posts/2016-06-03-test.md
@@ -5,9 +5,8 @@ date: 2016-06-03
 categories:
   - jekyll
   - update
+thumbnail: //placehold.it/1500x1000
 ---
-
-![会議の様子](//placehold.it/1500x1000)
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos saepe voluptates tempore, aut vero illum itaque at eius inventore beatae exercitationem veniam in sunt! Corrupti tempora tempore repellendus nesciunt quaerat.
 
