--- a/_posts/2016-06-03-test.md
+++ b/_posts/2016-06-03-test.md
@@ -22,11 +22,23 @@ Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime fugit laudantiu
 
 Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus rem ullam obcaecati, nisi, quis deleniti sed veritatis sapiente reiciendis odio delectus quod fugit voluptas in cum dolores ea iure. Necessitatibus!
 
-- リスト
-- リスト
-- リスト
+- list
+  - list
+  - list
+  - list
+    1. list
+    2. list
+    3. list
+- list
+- list
 
 1. list
+   1. list
+   2. list
+   3. list
+      - list
+      - list
+      - list
 2. list
 3. list
 
