--- a/_posts/2016-07-29-go-global.md
+++ b/_posts/2016-07-29-go-global.md
@@ -9,7 +9,7 @@ thumbnail: /assets/images/2016-07-29-thumbnail.jpg
 子供達に海外の文化やコミュニティーにふれてもらいたい。その思いから、この度『Go Global! DojoCon Japan 2016プログラミングコンテスト』を開催することにいたしました。CoderDojoに参加有無関係なく日本全国の子供をアイルランドで毎年6月頃に開催しているCoolest Projectsへご招待します。  
 子供の頃から海外の文化やコミュニティーの空気にふれることは非常に良い機会だと考えています。アイルランドで開催される<a href="http://coolestprojects.org" target="_blank">Coolest Projects</a>を経験することで今後日本のDojoにも大きく貢献してくれると期待しています。ぜひふるってご参加ください。  
 <a href="{{ '/assets/pdf/go-global-terms.pdf' | prepend: site.baseurl}}" target="_blank">参加規約</a>  
-ご応募は<a href="https://docs.google.com/forms/d/e/1FAIpQLSd0mrHkymSTa1R5nD13PhrgvVz4MEzskpunHKl7j8w71xtyyg/viewform" target="_blank">こちら</a>
+ご応募は<a href="#entry">こちら</a>
   
 
 <table>
@@ -66,4 +66,8 @@ thumbnail: /assets/images/2016-07-29-thumbnail.jpg
 </table>
 
 <a href="{{ '/assets/pdf/go-global-terms.pdf' | prepend: site.baseurl}}" target="_blank">参加規約</a>  
-ご応募は<a href="https://docs.google.com/forms/d/e/1FAIpQLSd0mrHkymSTa1R5nD13PhrgvVz4MEzskpunHKl7j8w71xtyyg/viewform" target="_blank">こちら</a>
+
+
+<a id="entry"></a>
+<iframe width="100%" height="500" src="https://docs.google.com/forms/d/e/1FAIpQLSd0mrHkymSTa1R5nD13PhrgvVz4MEzskpunHKl7j8w71xtyyg/viewform">
+</iframe>
