--- a/_posts/2016-07-29-go-global.md
+++ b/_posts/2016-07-29-go-global.md
@@ -69,5 +69,4 @@ thumbnail: /assets/images/2016-07-29-thumbnail.jpg
 
 
 <a id="entry"></a>
-<iframe width="100%" height="500" src="https://docs.google.com/forms/d/e/1FAIpQLSd0mrHkymSTa1R5nD13PhrgvVz4MEzskpunHKl7j8w71xtyyg/viewform">
-</iframe>
+<iframe class="sponsor-form" src="https://docs.google.com/forms/d/e/1FAIpQLSd0mrHkymSTa1R5nD13PhrgvVz4MEzskpunHKl7j8w71xtyyg/viewform" width="100%" height="1800" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
