adjust news "Go Global". Add notification of prize.

--- a/_posts/2016-07-29-go-global.md
+++ b/_posts/2016-07-29-go-global.md
@@ -48,7 +48,7 @@ thumbnail: /assets/images/2016-07-29-thumbnail.jpg
 </tr>
 <tr>
 <th>賞</th>
-<td>最優秀賞<br />副賞：CoderDojo Coolest Project 2017ご招待（交通費、宿泊費20万円分を本イベントから負担）</td>
+<td>最優秀賞<br />副賞：アイルランドで開催されるCoderDojo Coolest Project 2017ご招待（交通費、宿泊費20万円分を本イベントから負担）<br />※CoderDojo Coolest Project 2017へは親権者が必ずご同伴ください。親権者の交通費、宿泊費はご負担ください。</td>
 </tr>
 <tr>
 <th>審査員</th>
