--- a/_posts/2016-08-01-test.md
+++ b/_posts/2016-08-01-test.md
@@ -7,14 +7,14 @@ thumbnail: /assets/images/2016-07-29-thumbnail.jpg
 ## test
 <div class="sponsor-section">
 <div class="gold-sponsors sponsor-container">
-<h2>Gold Sponsors</h2>
+<h2 class="sponsor-rank-title">Gold Sponsors</h2>
 <ul class="sponsors">
 <li><a href="https://amimoto-ami.com/" target="_blank"><img src="{{ '/assets/images/logo-amimoto.svg' | prepend: site.baseurl }}" alt="AMIMOTO AMI"></a></li>
 <li><a href="http://gadget.renesas.com/" target="_blank"><img src="{{ '/assets/images/logo-renesas.svg' | prepend: site.baseurl }}" alt="ルネサスエレクトロニクス株式会社"></a></li>
 </ul>
 </div>
 <div class="silver-sponsors sponsor-container">
-<h2>Silver Sponsors</h2>
+<h2 class="sponsor-rank-title">Silver Sponsors</h2>
 <ul class="sponsors">
 <li><a href="http://www.cpi.ad.jp/" target="_blank"><img src="{{ '/assets/images/logo-cpi.svg' | prepend: site.baseurl }}" alt="株式会社KDDIウェブコミュニケーションズ"></a></li>
 <li><a href="http://www.mitou.org/" target="_blank"><img src="{{ '/assets/images/logo-mitou.png' | prepend: site.baseurl }}" alt="一般社団法人未踏"></a></li>
@@ -24,7 +24,7 @@ thumbnail: /assets/images/2016-07-29-thumbnail.jpg
 </ul>
 </div>
 <div class="bronze-sponsors sponsor-container">
-<h2>Bronze Sponsors</h2>
+<h2 class="sponsor-rank-title">Bronze Sponsors</h2>
 <ul class="sponsors">
 <li><a href="http://www.tam-tam.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-tam.png' | prepend: site.baseurl }}" alt="株式会社TAM"></a></li>
 <li><a href="https://www.r3it.com/" target="_blank"><img src="{{ '/assets/images/logo-r3.svg' | prepend: site.baseurl }}" alt="アールスリーインスティテュート"></a></li>
