--- a/_posts/2016-08-08-sponsers.md
+++ b/_posts/2016-08-08-sponsers.md
@@ -18,8 +18,9 @@ DojoCon Japan実行委員一同、心よりお礼申し上げます。
 <li><a href="http://gadget.renesas.com/" target="_blank"><img src="{{ '/assets/images/logo-renesas.svg' | prepend: site.baseurl }}" alt="ルネサスエレクトロニクス株式会社"></a></li>
 </ul>
 </div>
-<div class="silver-sponsors sponsor-container">
-<h2>Silver Sponsors</h2>
+<div class="sponsor-section">
+<div class="gold-sponsors sponsor-container">
+<h2 class="sponsor-rank-title">Gold Sponsors</h2>
 <ul class="sponsors">
 <li><a href="http://www.cpi.ad.jp/" target="_blank"><img src="{{ '/assets/images/logo-cpi.svg' | prepend: site.baseurl }}" alt="株式会社KDDIウェブコミュニケーションズ"></a></li>
 <li><a href="http://www.mitou.org/" target="_blank"><img src="{{ '/assets/images/logo-mitou.png' | prepend: site.baseurl }}" alt="一般社団法人未踏"></a></li>
@@ -29,7 +30,7 @@ DojoCon Japan実行委員一同、心よりお礼申し上げます。
 </ul>
 </div>
 <div class="bronze-sponsors sponsor-container">
-<h2>Bronze Sponsors</h2>
+<h2 class="sponsor-rank-title">Bronze Sponsors</h2>
 <ul class="sponsors">
 <li><a href="http://www.tam-tam.co.jp/" target="_blank"><img src="{{ '/assets/images/logo-tam.png' | prepend: site.baseurl }}" alt="株式会社TAM"></a></li>
 <li><a href="https://www.r3it.com/" target="_blank"><img src="{{ '/assets/images/logo-r3.svg' | prepend: site.baseurl }}" alt="アールスリーインスティテュート"></a></li>
