--- a/_posts/2016-08-08-sponsers.md
+++ b/_posts/2016-08-08-sponsers.md
@@ -20,7 +20,7 @@ DojoCon Japan実行委員一同、心よりお礼申し上げます。
 </div>
 <div class="sponsor-section">
 <div class="gold-sponsors sponsor-container">
-<h2 class="sponsor-rank-title">Gold Sponsors</h2>
+<h2 class="sponsor-rank-title">Silver Sponsors</h2>
 <ul class="sponsors">
 <li><a href="http://www.cpi.ad.jp/" target="_blank"><img src="{{ '/assets/images/logo-cpi.svg' | prepend: site.baseurl }}" alt="株式会社KDDIウェブコミュニケーションズ"></a></li>
 <li><a href="http://www.mitou.org/" target="_blank"><img src="{{ '/assets/images/logo-mitou.png' | prepend: site.baseurl }}" alt="一般社団法人未踏"></a></li>
