--- a/_posts/2016-07-29-go-global.md
+++ b/_posts/2016-07-29-go-global.md
@@ -73,15 +73,13 @@ thumbnail: /assets/images/2016-07-29-thumbnail.jpg
 </tr>
 <tr>
 <th>参加規約</th>
-<td><a href="{{ '/assets/pdf/go-global-terms.pdf' | prepend: site.baseurl}}" target="_blank">こちら</a>をご確認ください。</td>
+<td><a href="{{ '/assets/pdf/go-global-terms.pdf' | prepend: site.baseurl}}" target="_blank" style="text-decoration:underline;">こちら</a>をご確認ください。</td>
 </tr>
 <tr>
 <th>お問い合わせ</th>
-<td><a href="{{ '/contact/' | prepend: site.baseurl}}" target="_blank">こちら</a>よりお問い合わせください。</td>
+<td><a href="{{ '/contact/' | prepend: site.baseurl}}" target="_blank" style="text-decoration:underline;">こちら</a>よりお問い合わせください。</td>
 </tr>
 </table>
-
-
 
 <a id="entry"></a>
 <iframe class="sponsor-form" src="https://docs.google.com/forms/d/e/1FAIpQLSd0mrHkymSTa1R5nD13PhrgvVz4MEzskpunHKl7j8w71xtyyg/viewform?embedded=true" width="100%" height="2440" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
