--- a/_posts/2016-07-29-go-global.md
+++ b/_posts/2016-07-29-go-global.md
@@ -103,4 +103,4 @@ thumbnail: /assets/images/2016-07-29-thumbnail.jpg
 </table>
 
 <a id="entry"></a>
-<iframe class="sponsor-form" src="https://docs.google.com/forms/d/e/1FAIpQLSd0mrHkymSTa1R5nD13PhrgvVz4MEzskpunHKl7j8w71xtyyg/viewform?embedded=true" width="100%" height="2440" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+ご応募の受付は終了しました。たくさんのご応募ありがとうございました！
